@@ -1,3 +1,9 @@
+2002-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* pym.el (def*-maybe-enable-compile-time-hack): Bind it when
+	compiling.  Suggested by Shuhei KOBAYASHI.
+	(defun-when-void): Modify the arglist to follow the XEmacs style.
+
 2002-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* pym.el (defun-maybe): Use `defalias' instead of `defun'; don't
